이미지 추가

--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -6,3 +6,6 @@ title: "첫 포스팅"
 # 첫 깃허브 블로그 탄생 
 
 1년 동안 열심히 해보자 
+
+<img src="../images/2025-02-27-first/GdFPi6-XYAAq0_D.jpeg" alt="GdFPi6-XYAAq0_D" style="zoom:25%;" />
+
