--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title: "첫 포스팅"
+categories: coding
 ---
 
 # 첫 깃허브 블로그 탄생 
@@ -10,3 +11,31 @@ title: "첫 포스팅"
 <img src="../images/2025-02-27-first/GdFPi6-XYAAq0_D.jpeg" alt="GdFPi6-XYAAq0_D" style="zoom:25%;" />
 
 실시간으로 반영
+
+
+
+``` js
+`코드 테스트`
+<!doctype html>
+<html>
+
+  <head>
+    <title>JS Hello World</title>
+  </head>
+
+  <body>
+
+    <script>
+      var name = prompt('Input your name!!');
+      document.write('Welcome ' + name);
+
+    </script>
+  </body>
+
+</html>
+```
+
+
+
+
+
