--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -10,7 +10,7 @@ toc: true
 
 1년 동안 열심히 해보자 
 
-<img src="../images/2025-02-27-first/GdFPi6-XYAAq0_D.jpeg" alt="GdFPi6-XYAAq0_D" style="zoom:25%;" />
+![GdFPi6-XYAAq0_D](../images/2025-02-27-first/GdFPi6-XYAAq0_D-0658943.jpeg)
 
 실시간으로 반영
 
