--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -8,9 +8,11 @@ toc: true
 
 # 첫 깃허브 블로그 탄생 
 
-1년 동안 열심히 해보자 
+1년 동안 열심히 해보자
 
-![GdFPi6-XYAAq0_D](../images/2025-02-27-first/GdFPi6-XYAAq0_D-0658943.jpeg)
+![](../images/2025-02-27-first/bagle.jpeg)
+
+
 
 실시간으로 반영
 
