--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -1,44 +1,30 @@
 ---
 layout: single
-title: "첫 포스팅"
-categories: coding
-tag: [JavaScript,Python]
+title: "새로운 마음가짐"
+categories: log
+tag: [start]
 toc: true
 ---
 
-# 첫 깃허브 블로그 탄생 
+# 새로운 마음가짐 
 
-1년 동안 열심히 해보자
-
-![bagle](/images/2025-02-27-first/bagle-0660566.jpeg)
+![[bagle]](/images/2025-02-27-first/bagle-0660566.jpeg)
 
 
 
+이 블로그의 창설은 나에게 많은 의미가 있다.
 
-실시간으로 반영
+본격적으로 취업 시장에 뛰어드는 만큼, 이는 새로운 시작을 알리는 각오이자 다짐이기도 하다.
+
+솔직히 말해, 지금까지의 나는 성실하고 열심히 살아왔다고 자신 있게 말하기 어렵다. 오히려 그 반대에 가까웠다.
+
+그러니 앞으로의 1년은 다를 것이다. 나는 내 모든 것을 걸고, 마지막이라는 각오로 최선을 다할 생각이다.
+
+이 블로그는 그런 나의 1년을 기록하는 공간이 될 것이다.
 
 
 
-``` js
-`코드 테스트`
-<!doctype html>
-<html>
 
-  <head>
-    <title>JS Hello World</title>
-  </head>
-
-  <body>
-
-    <script>
-      var name = prompt('Input your name!!');
-      document.write('Welcome ' + name);
-
-    </script>
-  </body>
-
-</html>
-```
 
 
 
