--- a/_posts/2025-02-27-first.md
+++ b/_posts/2025-02-27-first.md
@@ -1,14 +1,14 @@
 ---
 layout: single
 title: "새로운 마음가짐"
-categories: log
-tag: [start]
+categories: diary
+tag: start
 toc: true
 ---
 
 # 새로운 마음가짐 
 
-![[bagle]](/images/2025-02-27-first/bagle-0660566.jpeg)
+![[bagle]](../../images/2025-02-27-first/bagle.jpeg)
 
 
 
